--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
   "dependencies": {
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
+    "css-loader": "^3.2.0",
     "express": "^4.17.1",
     "grommet": "^2.7.8",
+    "material-icons-react": "^1.0.4",
     "nodemon": "^1.19.1",
     "polished": "^3.4.1",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
+    "style-loader": "^1.0.0",
     "styled-components": "^4.4.0"
   }
 }
