--- a/package.json
+++ b/package.json
@@ -32,6 +32,14 @@
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
     "style-loader": "^1.0.0",
-    "styled-components": "^4.4.0"
+    "styled-components": "^4.4.0",
+    "apollo-datasource": "^0.1.3",
+    "apollo-datasource-rest": "^0.1.5",
+    "apollo-server": "2.6.1",
+    "apollo-server-testing": "2.6.1",
+    "graphql": "^14.2.1",
+    "isemail": "^3.1.3",
+    "sequelize": "^4.39.0",
+    "sqlite3": "^4.0.3"
   }
 }
