--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.5.5",
+    "@babel/plugin-transform-runtime": "^7.6.2",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "babel": "^6.23.0",
@@ -26,11 +27,14 @@
     "apollo-datasource-rest": "^0.1.5",
     "apollo-server": "2.6.1",
     "apollo-server-testing": "2.6.1",
+    "@babel/runtime": "^7.6.2",
     "axios": "^0.19.0",
+    "babel-polyfill": "^6.26.0",
     "body-parser": "^1.19.0",
     "css-loader": "^3.2.0",
     "express": "^4.17.1",
     "graphql": "^14.2.1",
+    "firebase": "^7.0.0",
     "grommet": "^2.7.8",
     "isemail": "^3.1.3",
     "material-icons-react": "^1.0.4",
