--- a/package.json
+++ b/package.json
@@ -21,25 +21,27 @@
     "webpack-cli": "^3.3.6"
   },
   "dependencies": {
-    "axios": "^0.19.0",
-    "body-parser": "^1.19.0",
-    "css-loader": "^3.2.0",
-    "express": "^4.17.1",
-    "grommet": "^2.7.8",
-    "material-icons-react": "^1.0.4",
-    "nodemon": "^1.19.1",
-    "polished": "^3.4.1",
-    "react-dom": "^16.8.6",
-    "react-router-dom": "^5.0.1",
-    "style-loader": "^1.0.0",
-    "styled-components": "^4.4.0",
     "apollo-datasource": "^0.1.3",
     "apollo-datasource-rest": "^0.1.5",
     "apollo-server": "2.6.1",
     "apollo-server-testing": "2.6.1",
+    "axios": "^0.19.0",
+    "body-parser": "^1.19.0",
+    "css-loader": "^3.2.0",
+    "express": "^4.17.1",
     "graphql": "^14.2.1",
+    "graphql-yoga": "^1.18.3",
+    "grommet": "^2.7.8",
     "isemail": "^3.1.3",
+    "material-icons-react": "^1.0.4",
+    "nodemon": "^1.19.1",
+    "polished": "^3.4.1",
+    "prisma-client-lib": "^1.34.8",
+    "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.1",
     "sequelize": "^4.39.0",
-    "sqlite3": "^4.0.3"
+    "sqlite3": "^4.0.3",
+    "style-loader": "^1.0.0",
+    "styled-components": "^4.4.0"
   }
 }
