--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "apollo-datasource": "^0.1.3",
     "apollo-datasource-rest": "^0.1.5",
     "apollo-server": "2.6.1",
+    "apollo-server-express": "^2.9.4",
     "apollo-server-testing": "2.6.1",
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
@@ -32,9 +33,11 @@
     "express": "^4.17.1",
     "firebase": "^7.0.0",
     "graphql": "^14.2.1",
+    "graphql-tag": "^2.10.1",
     "grommet": "^2.7.8",
     "isemail": "^3.1.3",
     "material-icons-react": "^1.0.4",
+    "mysql2": "^1.7.0",
     "nodemon": "^1.19.1",
     "polished": "^3.4.1",
     "react-dom": "^16.8.6",
