--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "webpack-cli": "^3.3.6"
   },
   "dependencies": {
+    "@storybook/react": "^5.2.1",
     "apollo-boost": "^0.4.4",
     "apollo-datasource": "^0.1.3",
     "apollo-datasource-rest": "^0.1.5",
