--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "compile": "webpack --watch",
-    "start": "nodemon server/server.js",
-    "dev": "npm run generate-imported-components && parcel app/index.html --hmr-port 1235"
+    "start": "nodemon server/server.js"
   },
   "author": "chickpeach",
   "license": "ISC",
