--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 node_modules
 .DS_Store
 dist/bundle.js
-firebase.config.js
 package-lock.json
 spoonAPI.config.js
 AWS.RDS.config.js
+.env
+firebase.config.js
