--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "compile": "webpack --watch",
-    "start": "nodemon server/server.js",
-    "dev": "npm run generate-imported-components && parcel app/index.html --hmr-port 1235"
+    "start": "nodemon server/server.js"
   },
   "author": "chickpeach",
   "license": "ISC",
@@ -17,6 +16,7 @@
     "@babel/preset-react": "^7.0.0",
     "babel": "^6.23.0",
     "babel-loader": "^8.0.6",
+    "nodemon": "^1.19.3",
     "react": "^16.8.6",
     "webpack": "^4.38.0",
     "webpack-cli": "^3.3.6"
@@ -25,13 +25,15 @@
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "css-loader": "^3.2.0",
+    "dotenv": "^8.1.0",
+    "dotenv-webpack": "^1.7.0",
     "express": "^4.17.1",
     "firebase": "^7.0.0",
+    "fs": "0.0.1-security",
     "grommet": "^2.7.8",
     "isemail": "^3.1.3",
     "material-icons-react": "^1.0.4",
     "mysql2": "^1.7.0",
-    "nodemon": "^1.19.1",
     "polished": "^3.4.1",
     "react-dom": "^16.8.6",
     "react-hookstore": "^1.4.2",
